feat: add experiment orchestration & fix async ETL event loop
1. Experimentation Framework:
- Introduced a modular system for validating research papers in `liquid_shared.experiments`.
- Added `run_experiments.py` CLI entry point.
- Implemented `dual_pipeline` (RAG vs Unified) and `rag_quality` experiments.
- Added MLflow tracking and metric generation (`generation_evaluator`, `rag_evaluator`).
- Added `QUICKSTART_EXPERIMENTS.md` and research validation summary.

2. Critical Fix (ETL Pipeline):
- Resolved `RuntimeError: This event loop is already running` in `graph_etl.py`.
- Refactored `chunking_agent.py` to expose a native `async` run method.
- Updated `pydantic-graph` node execution to `await` the agent properly instead of forcing a synchronous wrapper inside an existing loop.

3. Configuration & Data:
- Updated `pyproject.toml` dependencies.
- Included initial experiment baselines in `data/experiments`.

--- a/liquid-shared-core/pyproject.toml
+++ b/liquid-shared-core/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "transformers>=4.40",
     "sentence-transformers>=2.2",
     "chromadb>=0.4",
+    "numpy>=1.24",
+    "scipy>=1.10",
+    "rouge-score>=0.1.2",
 ]
 
 [project.optional-dependencies]
