--- a/liquid-etl-pipeline/pyproject.toml
+++ b/liquid-etl-pipeline/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "sentence-transformers>=2.2",
     "chromadb>=0.4",
     "pypdf>=3.0",
+    "nest-asyncio>=1.5",
 ]
 
 [project.optional-dependencies]
