--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,31 +18,26 @@ dependencies = [
     "liquid-rag-runtime",
     "liquid-mcp-tools",
     "liquid-ft-trainer",
-
     # Core dependencies
     "pydantic>=2.0",
     "pydantic-ai[outlines-transformers]>=1.0",
     "pydantic-graph>=0.1",
-
     # ML/AI dependencies
     "torch>=2.0",
     "transformers>=4.40",
     "sentence-transformers>=2.2",
     "accelerate>=0.20",
     "safetensors>=0.4",
-
     # Vector DB and embeddings
     "chromadb>=0.4",
-
     # Web framework (for RAG API)
     "fastapi>=0.100",
     "uvicorn>=0.23",
-
     # Document processing
     "pypdf>=3.0",
-
     # HuggingFace utilities
     "huggingface-hub>=0.17",
+    "mlflow>=3.7.0",
 ]
 
 [project.optional-dependencies]
