feat: document ETL status and improve LiquidAI model loading
- Add CURRENT_STATUS.md summarizing ETL runs and experiment status
- Update liquid_model to better handle device selection and logging for LFM2 models
- Update .gitignore to exclude local data (vectordb, FT JSONL, processed docs) and session artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ Thumbs.db
 mlflow.db
 data/experiments/all_results.json
 data/experiments/20251210_233107/all_results.json
+PREVIOUS_ETL_INSIGHTS.md
+ETL/
+liquid-shared-core/data/vectordb/
+
