/test_v1_keywords and Version 0.0.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     # HuggingFace utilities
     "huggingface-hub>=0.17",
     "mlflow>=3.7.0",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
